# pac-bayes-gan-reproduction

./: README.md  pyproject.toml
src/: data.py  layers.py  models.py  prob_nn.py  train_synthetic.py
