[project]
name = "pac-bayes-gan-reproduction"
version = "0.1.0"
description = "Reproduction code for PAC-Bayesian Generalization Bounds for Adversarial Generative Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
    "torchmetrics[image]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- PyTorch GPU (CUDA 12.1) 設定 ---

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "torch_stable"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "torch_stable" }
torchvision = { index = "torch_stable" }